[package]
name = "crabmq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
dotenvy = "0.15"
log = "0.4.25"
env_logger = "0.11.6"
thiserror = "2.0.11"
uuid = { version = "1", features = ["fast-rng", "v4", "serde"] }
rand = "0.9.0"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
tap = "1.0.1"
async-trait = "0.1.86"
borsh = { version = "1.5.5" }
borsh-derive = "1.5.5"
chrono = { version = "0.4.39", features = ["serde"] }
bincode = "1.3.3"
crc32fast = "1.4.2"
actix-web = "4.9.0"
